@@ -10,7 +10,6 @@ A2\t[:function, :INDIRECT, [:cell, :"$A$5"]]
 A3\t[:function, :SUM, [:function, :INDIRECT, [:string, "$A$5:$B$10"]]]
 A4\t[:function, :IFERROR, [:function, :INDEX, [:function, :INDIRECT, [:error, "#VALUE!"]], [:constant, "C3545"]], [:number, "3"]]
 A5\t[:function, :INDIRECT, [:string,"$A$5"], [:boolean_true]]
-A6\t[:function, :INDIRECT, [:string, "notareference!"]]
 END
 
 expected_output = <<END
@@ -19,7 +18,6 @@ A2\t[:function, :INDIRECT, [:cell, :"$A$5"]]
 A3\t[:function, :SUM, [:area, :"$A$5", :"$B$10"]]
 A4\t[:function, :IFERROR, [:function, :INDEX, [:error, "#VALUE!"], [:constant, "C3545"]], [:number, "3"]]
 A5\t[:cell, :"$A$5"]
-A6\t[:error, :"#REF!"]
 END
     
 input = StringIO.new(input)
